[package]
name = "css-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib","lib"]
test = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"
fake = "2.5"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

wasm-bindgen = "0.2"
